--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,8 @@
+title: Susana Roman Garcia
+description: 
+  github:
+  id: 'Susana465'
+  href: 'https://github.com/'
+  title: 'GitHub'
+  fa-icon: 'fa-github-square'
 theme: jekyll-theme-architect
