--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,15 @@
 title: Susana Roman Garcia
 description: 
   github:
-  id: 'Susana465'
-  href: 'https://github.com/'
-  title: 'GitHub'
-  fa-icon: 'fa-github-square'
+   id: 'Susana465'
+    href: 'https://github.com/'
+    title: 'GitHub'
+    fa-icon: 'fa-github-square'
+  
+  email:
+    id: 'your.name@yoursite.com'
+    href: 'mailto:'
+    title: 'Email'
+    fa-icon: 'fa-envelope-square'
+  
 theme: jekyll-theme-architect
