--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Susana Roman Garcia
-description: PhD student on Computational Neuroscience and Ethics, MSc Neuroinformatics, BSc Neuroscience.
+description: PhD student on Computational Neuroscience and Ethics; MSc Neuroinformatics; BSc Neuroscience.
 
 github:
     id: 'Susana465'
