deleted spanish, title too long

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Susana Roman Garcia
-description: PhD student on Computational Neuroscience and Ethics; MSc Neuroinformatics; BSc Neuroscience.// Estudiante de doctorado en Neurociencia Computacional y Ética; Maestría en Neuroinformática; Licenciada en Neurociencias.
+description: PhD student on Computational Neuroscience and Ethics; MSc Neuroinformatics; BSc Neuroscience.
   
 theme: jekyll-theme-architect
